--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,13 @@
 ---
 ---
 
-@article{ray2025satdynamicspatialaptitude,
+@InProceedings{ray2025satdynamicspatialaptitude,
     abbr={COLM},
     title={SAT: Dynamic Spatial Aptitude Training for Multimodal Language Models}, 
     author={Arijit Ray and Jiafei Duan† and Ellis Brown† and Reuben Tan and Dina Bashkirova and Rose Hendrix and Kiana Ehsani and Aniruddha Kembhavi and Bryan A. Plummer and Ranjay Krishna and Kuo-Hao Zeng and Kate Saenko},
     year={2025},
     arxiv={2412.07755},
+    include={true},
     booktitle={COLM},
     website={https://arijitray.com/SAT/},
     pdf={https://arxiv.org/pdf/2412.07755},
@@ -30,6 +31,7 @@
     bibtex_show={true},
     preview={cambrian.png},
     selected={true},
+    include={true},
     booktitle={NeurIPS},
     annotation={* Equal contribution},
     award_name={Oral <strong>(1.8%)</strong>},
@@ -47,6 +49,7 @@
     code={https://github.com/VIRL-Platform/VIRL},
     abstract={There is a sensory gulf between the Earth that humans inhabit and the digital realms in which modern AI agents are created. To develop AI agents that can sense, think, and act as ﬂexibly as humans in real-world settings, it is imperative to bridge the realism gap between the digital and physical worlds. How can we embody agents in an environment as rich and diverse as the one we inhabit, without the constraints imposed by real hardware and control? Towards this end, we introduce V-IRL: a platform that enables agents to scalably interact with the real world in a virtual yet realistic environment. Our platform serves as a playground for developing agents that can accomplish various practical tasks and as a vast testbed for measuring progress in capabilities spanning perception, decision-making, and interaction with real-world data across the entire globe.},
     bibtex_show={true},
+    include={true},
     abbr={ECCV},
     preview={virl_2.png},
     selected={false},
@@ -75,6 +78,7 @@
     title={Your Diffusion Model is Secretly a Zero-Shot Classifier}, 
     author={Alexander C. Li and Mihir Prabhudesai and Shivam Duggal and Ellis Brown and Deepak Pathak},
     year={2023},
+    include={true},
     booktitle = {ICCV},
     year      = {2023},
     pages     = {2206-2217},
@@ -98,6 +102,7 @@
     year={2023},
     booktitle={ICML},
     selected={true},
+    include={true},
     arxiv={2302.14051},
     website={https://internet-explorer-ssl.github.io/},
     pdf={https://internet-explorer-ssl.github.io/static/docs/InternetExplorer.pdf},
