--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,8 +4,10 @@
 @article{brown2025simsv,
     title   =  {{SIMS-V}: Simulated Instruction-Tuning for Spatial Video Understanding},
     author  =  {Brown, Ellis and Ray, Arijit and Krishna, Ranjay and Girshick, Ross and Fergus, Rob and Xie, Saining},
-    journal =  {arXiv preprint},
+    journal =  {arXiv preprint arXiv:2511.04668},
     year    =  {2025},
+    arxiv={2511.04668},
+    pdf={https://arxiv.org/pdf/2511.04668},
     abbr={arXiv},
     website={./sims-v/},
     include={true},
