add cambrian-S and TsT

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,38 @@
 ---
 ---
 
+@article{yang2025cambrian-s,
+    author = {Yang*, Shusheng and Yang*, Jihan and Huang†, Pinzhi and Brown†, Ellis and Yang, Zihao and Yu, Yue and Tong, Shengbang and Zheng, Zihan and Xu, Yifan and Wang, Muhan and Lu, Danhao and Fergus, Rob and LeCun, Yann and Fei-Fei, Li and Xie, Saining},
+    title = {{Cambrian-S: Towards Spatial Supersensing in Video}},
+    journal = {arXiv preprint arXiv:2511.04670},
+    year = {2025},
+    arxiv={2511.04670},
+    pdf={https://arxiv.org/pdf/2511.04670},
+    abbr={arXiv},
+    website={https://cambrian-mllm.github.io/cambrian-s/},
+    include={true},
+    bibtex_show={true},
+    selected={true},
+    preview={cambrian-s.png},
+    annotation={† Core team},
+}
+
+@article{brown2025shortcuts,
+    author = {Brown, Ellis and Yang, Jihan and Yang, Shusheng and Fergus, Rob and Xie, Saining},
+    title = {Benchmark Designers Should ``Train on the Test Set'' to Expose Exploitable Non-Visual Shortcuts},
+    journal = {arXiv preprint arXiv:2511.04655},
+    year = {2025},
+    arxiv={2511.04655},
+    pdf={https://arxiv.org/pdf/2511.04655},
+    abbr={arXiv},
+    website={https://vision-x-nyu.github.io/test-set-training},
+    include={true},
+    bibtex_show={true},
+    selected={true},
+    preview={TsT.png},
+}
+
+
 @article{brown2025simsv,
     title   =  {{SIMS-V}: Simulated Instruction-Tuning for Spatial Video Understanding},
     author  =  {Brown, Ellis and Ray, Arijit and Krishna, Ranjay and Girshick, Ross and Fergus, Rob and Xie, Saining},
@@ -12,6 +44,7 @@
     website={./sims-v/},
     include={true},
     bibtex_show={true},
+    selected={true},
     preview={sims-v.png},
 }
 
